Fix a bug at pinned messages jump button
Version 1.2.7 > 1.2.8

--- a/crystalline.css
+++ b/crystalline.css
@@ -1,6 +1,6 @@
 /**************************************************
          Crystalline CSS for BeautifulDiscord
-                   Version 1.2.7
+                   Version 1.2.8
 
                  Created by SamuiNe
              https://github.com/SamuiNe
@@ -1315,6 +1315,10 @@ div.jump-button{
     background-color: rgba(255, 255, 255, 0.2) !important;
     color: rgba(255, 255, 255, 0.9);
     border-radius: 0;
+}
+
+.messages-popout .message-group .action-buttons .jump-button{
+    background-color: rgba(0, 0, 0, 0) !important;
 }
 
 div.option.selected{
